syntax = "proto3";

package kv;

option go_package = "cs426.yale.edu/lab4/kv/proto";

message GetRequest {
	string key = 1;
}

message SetRequest {
	string key = 1;
	string value = 2;
	int64 ttl_ms = 3;
}

message DeleteRequest {
	string key = 1;
}

message AddRequest {
	string key = 1;
	string value = 2;
	int64 ttl_ms = 3;
}

message ReplaceRequest {
	string key = 1;
	string value = 2;
	int64 ttl_ms = 3;
}

message GetResponse {
	string value = 1;
	bool was_found = 2;
}

message SetResponse {}
message DeleteResponse {}
message AddResponse {}
message ReplaceResponse {}


message GetShardContentsRequest {
	int32 shard = 1;
}

message GetShardValue {
	string key = 1;
	string value = 2;
	int64 ttl_ms_remaining = 3;
}
message GetShardContentsResponse {
	repeated GetShardValue values = 1;
}

service Kv {
	rpc Get(GetRequest) returns (GetResponse);
	rpc Set(SetRequest) returns (SetResponse);
	rpc Delete(DeleteRequest) returns (DeleteResponse);
	rpc Add(AddRequest) returns (AddResponse);
	rpc Replace(ReplaceRequest) returns (ReplaceResponse);

	rpc GetShardContents(GetShardContentsRequest) returns (GetShardContentsResponse);
}
